@@ -9,6 +9,7 @@ Hadoop ETL: removing tabs found in referer search terms (#234)
 Hadoop ETL: fixed client timestamp so it's not incorrectly localised (#238)
 Hadoop ETL: added parsing of collector version `cv` (#243)
 Hadoop ETL: bumped Scalaz from 7.0.0-M9 to 7.0.0
+Hadoop ETL: removed .gets from extractPageUri (#249) - TODO
 EmrEtlRunner: bumped to 0.2.0
 EmrEtlRunner: now passes MaxMind .dat file into Scalding ETL (#213)
 EmrEtlRunner: improve messages when ETL job starts and fails (#230)
